crates/swc/tests/tsc-references/classExtendsItself_es5.1.normal.js
import * as swcHelpers from "@swc/helpers";
var C1 = /*#__PURE__*/ function(C) {
    "use strict";
    swcHelpers.inherits(C1, C);
    var _super = swcHelpers.createSuper(C1);
    function C1() {
        swcHelpers.classCallCheck(this, C1);
        return _super.apply(this, arguments);
    }
    return C1;
} // error
(C1);
var D1 = /*#__PURE__*/ function(D) {
    "use strict";
    swcHelpers.inherits(D1, D);
    var _super = swcHelpers.createSuper(D1);
    function D1() {
        swcHelpers.classCallCheck(this, D1);
        return _super.apply(this, arguments);
    }
    return D1;
} // error
(D1);
var E1 = /*#__PURE__*/ function(E) {
    "use strict";
    swcHelpers.inherits(E1, E);
    var _super = swcHelpers.createSuper(E1);
    function E1() {
        swcHelpers.classCallCheck(this, E1);
        return _super.apply(this, arguments);
    }
    return E1;
} // error
(E1);
